{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 142,
  "lineage": "3b48e70c-2dc3-3787-e576-b53c9cd65f49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ed0d4612f04df04",
            "domain": "vpc",
            "id": "eipalloc-09ed0d4612f04df04",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-134-254-235.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.254.235",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_internet_gateway_attachment.attach_gateway",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b353b39b3f4d340",
            "domain": "vpc",
            "id": "eipalloc-07b353b39b3f4d340",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-130-175-213.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.175.213",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_internet_gateway_attachment.attach_gateway",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041333e5a97575a94",
            "domain": "vpc",
            "id": "eipalloc-041333e5a97575a94",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-9-158-53.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.158.53",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_internet_gateway_attachment.attach_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:internet-gateway/igw-0d73f1f26777b6a85",
            "id": "igw-0d73f1f26777b6a85",
            "owner_id": "523966993919"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ed0d4612f04df04",
            "connectivity_type": "public",
            "id": "nat-036522818bbc54c89",
            "network_interface_id": "eni-08bf4d621fed3b49e",
            "private_ip": "10.60.15.158",
            "public_ip": "18.134.254.235",
            "subnet_id": "subnet-074077fa1fd94e5ad"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_internet_gateway_attachment.attach_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b353b39b3f4d340",
            "connectivity_type": "public",
            "id": "nat-0091293e12661e969",
            "network_interface_id": "eni-042d86e86b8fba1b4",
            "private_ip": "10.60.15.177",
            "public_ip": "18.130.175.213",
            "subnet_id": "subnet-040f0a6830040ae79"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_internet_gateway_attachment.attach_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041333e5a97575a94",
            "connectivity_type": "public",
            "id": "nat-0323a3ea2e36b4c9c",
            "network_interface_id": "eni-0364b0431c1c725b2",
            "private_ip": "10.60.15.211",
            "public_ip": "3.9.158.53",
            "subnet_id": "subnet-0b1799da909ab5739"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_internet_gateway_attachment.attach_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:network-acl/acl-0e1c2ac866f57641f",
            "egress": [],
            "id": "acl-0e1c2ac866f57641f",
            "ingress": [],
            "owner_id": "523966993919",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_subnet_network_acl_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08bc9153ac5817f64",
            "network_acl_id": "acl-0e1c2ac866f57641f",
            "subnet_id": "subnet-00ee85ee9faa6372d"
          },
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08a5c5dacb0e333f2",
            "network_acl_id": "acl-0e1c2ac866f57641f",
            "subnet_id": "subnet-057c1400f386f3742"
          },
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-015e39868ee4d092a",
            "network_acl_id": "acl-0e1c2ac866f57641f",
            "subnet_id": "subnet-0e768b54870bd5688"
          },
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_subnet_network_acl_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f97a4f53427d7ec0",
            "network_acl_id": "acl-0e1c2ac866f57641f",
            "subnet_id": "subnet-074077fa1fd94e5ad"
          },
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0527d70ddb420b0ed",
            "network_acl_id": "acl-0e1c2ac866f57641f",
            "subnet_id": "subnet-040f0a6830040ae79"
          },
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0343e936d3d95e339",
            "network_acl_id": "acl-0e1c2ac866f57641f",
            "subnet_id": "subnet-0b1799da909ab5739"
          },
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_network_acl_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4192424713",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e1c2ac866f57641f",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_network_acl_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1524753955",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e1c2ac866f57641f",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.network_acl",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route_via_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d73f1f26777b6a85",
            "id": "r-rtb-0ac1987aefa14fb2f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac1987aefa14fb2f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_via_igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_via_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c197bd6ea26dede31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-036522818bbc54c89",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c197bd6ea26dede3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_internet_gateway_attachment.attach_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_table_via_ngw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d547994357260591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0091293e12661e969",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d54799435726059",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_internet_gateway_attachment.attach_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_table_via_ngw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0750e7ee7ca891b111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0323a3ea2e36b4c9c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0750e7ee7ca891b11",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.internet_gateway",
            "aws_internet_gateway_attachment.attach_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.route_table_via_ngw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_via_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:route-table/rtb-0c197bd6ea26dede3",
            "id": "rtb-0c197bd6ea26dede3",
            "owner_id": "523966993919",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:route-table/rtb-02d54799435726059",
            "id": "rtb-02d54799435726059",
            "owner_id": "523966993919",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:route-table/rtb-0750e7ee7ca891b11",
            "id": "rtb-0750e7ee7ca891b11",
            "owner_id": "523966993919",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_via_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:route-table/rtb-0ac1987aefa14fb2f",
            "id": "rtb-0ac1987aefa14fb2f",
            "owner_id": "523966993919",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084b49ec3768a55b2",
            "route_table_id": "rtb-0c197bd6ea26dede3",
            "subnet_id": "subnet-00ee85ee9faa6372d"
          },
          "dependencies": [
            "aws_route_table.route_table_via_ngw",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066b39ec1539d31c3",
            "route_table_id": "rtb-02d54799435726059",
            "subnet_id": "subnet-057c1400f386f3742"
          },
          "dependencies": [
            "aws_route_table.route_table_via_ngw",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017bd050f2ef553e3",
            "route_table_id": "rtb-0750e7ee7ca891b11",
            "subnet_id": "subnet-0e768b54870bd5688"
          },
          "dependencies": [
            "aws_route_table.route_table_via_ngw",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0970c3f5925d03212",
            "route_table_id": "rtb-0ac1987aefa14fb2f",
            "subnet_id": "subnet-074077fa1fd94e5ad"
          },
          "dependencies": [
            "aws_route_table.route_via_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab83bea49d837033",
            "route_table_id": "rtb-0ac1987aefa14fb2f",
            "subnet_id": "subnet-040f0a6830040ae79"
          },
          "dependencies": [
            "aws_route_table.route_via_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a53941db64e7cba4",
            "route_table_id": "rtb-0ac1987aefa14fb2f",
            "subnet_id": "subnet-0b1799da909ab5739"
          },
          "dependencies": [
            "aws_route_table.route_via_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:subnet/subnet-00ee85ee9faa6372d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.60.14.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ee85ee9faa6372d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523966993919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:subnet/subnet-057c1400f386f3742",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.60.14.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057c1400f386f3742",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523966993919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:subnet/subnet-0e768b54870bd5688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.60.15.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e768b54870bd5688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523966993919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:subnet/subnet-074077fa1fd94e5ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.60.15.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074077fa1fd94e5ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523966993919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:subnet/subnet-040f0a6830040ae79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.60.15.160/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040f0a6830040ae79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523966993919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:subnet/subnet-0b1799da909ab5739",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.60.15.192/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1799da909ab5739",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523966993919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:vpc/vpc-0b909043b92139b6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.60.14.0/23",
            "default_network_acl_id": "acl-000bb5d2704725d1b",
            "default_route_table_id": "rtb-0e560fb8c7026d98d",
            "default_security_group_id": "sg-0a988b686d86e8c78",
            "dhcp_options_id": "dopt-0ffa34ef961915243",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b909043b92139b6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e560fb8c7026d98d",
            "owner_id": "523966993919"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:523966993919:vpc-endpoint/vpce-0de0a038614ae74d1",
            "cidr_blocks": [
              "35.71.111.0/25",
              "52.94.15.0/24",
              "35.71.111.128/26"
            ],
            "id": "vpce-0de0a038614ae74d1",
            "owner_id": "523966993919",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-b3a742da",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02d54799435726059",
              "rtb-0750e7ee7ca891b11",
              "rtb-0c197bd6ea26dede3"
            ],
            "service_name": "com.amazonaws.eu-west-2.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b909043b92139b6f"
          },
          "dependencies": [
            "aws_route_table.route_table_via_ngw",
            "aws_vpc.vpc",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}